[package]
name = "quiceh_apps"
version = "0.1.0"
authors = ["Florentin Rochet <florentin.rochet@unamur.be>"]
edition = "2018"
publish = false

[features]
# Enable quiceh's fuzzing mode.
fuzzing = ["quiceh/fuzzing"]

# Enable qlog support.
qlog = ["quiceh/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["quiceh/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["quiceh/sfv"]

default = ["qlog", "sfv"]

[dependencies]
docopt = "1"
env_logger = "0.10"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
log = "0.4"
octets_rev = { version = "0.1.0", path = "../octets_rev" }
ring = { git = "https://github.com/frochet/ring", branch = "b/0.16" }
quiceh = { path = "../quiceh" }
libc = "0.2"
nix = { version = "0.27", features = ["net", "socket", "uio"] }

[lib]
crate-type = ["lib"]
