[package]
name = "quiceh"
version = "0.1.0"
authors = ["Florentin Rochet <florentin.rochet@unamur.be>"]
edition = "2018"
build = "src/build.rs"
description = "Research implementation of QUIC VReverso"
repository = "https://github.com/frochet/quiceh"
readme = "README.md"
keywords = ["quic", "http3"]
categories = ["network-programming"]
license = "BSD-2-Clause"
rust-version = "1.66"
include = [
    "/*.md",
    "/*.toml",
    "/COPYING",
    "/deps/boringssl/**/*.[chS]",
    "/deps/boringssl/**/*.asm",
    "/deps/boringssl/src/**/*.cc",
    "/deps/boringssl/**/CMakeLists.txt",
    "/deps/boringssl/**/sources.cmake",
    "/deps/boringssl/LICENSE",
    "/examples",
    "/include",
    "/src",
]

[features]
default = ["boringssl-vendored"]

# Build the vendored BoringSSL library.
boringssl-vendored = []

# Use the BoringSSL library provided by the boring crate.
boringssl-boring-crate = ["boring", "foreign-types-shared"]

# Build quiceh against OpenSSL instead of BoringSSL.
openssl = ["pkg-config"]

# Generate pkg-config metadata file for libquiceh.
pkg-config-meta = []

# Equivalent to "--cfg fuzzing", but can also be checked in build.rs.
fuzzing = []

# Build and expose the FFI API.
ffi = []

# Exposes internal APIs that have no stability guarantees across versions.
internal = []

[package.metadata.docs.rs]
no-default-features = true
features = ["boringssl-boring-crate", "qlog"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cmake = "0.1"
pkg-config = { version = "0.3", optional = true }

[dependencies]
either = { version = "1.8", default-features = false }
log = { version = "0.4", features = ["std"] }
libc = "0.2"
libm = "0.2"
ring = { git = "https://github.com/frochet/ring" }
slab = "0.4"
once_cell = "1"
octets_rev = { version = "0.1.0", path = "../octets_rev" }
boring = { version = "4", optional = true }
foreign-types-shared = { version = "0.3.0", optional = true }
intrusive-collections = "0.9.5"
qlog = { version = "0.13", path = "../qlog", optional = true }
sfv = { version = "0.9", optional = true }
smallvec = { version = "1.10", features = ["serde", "union"] }
likely_stable = "0.1.2"
cpu-time = "1.0.0"
itertools = "0.12.1"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["wincrypt", "ws2def", "ws2ipdef", "ws2tcpip"] }

[dev-dependencies]
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "2.5"
# criterion = { version = "0.5.1", features = ["html_reports"] }
criterion = { version = "0.5.1"}

[lib]
crate-type = ["lib", "staticlib", "cdylib"]


[[bench]]
name = "quic_benchmarks"
harness = false

[[bench]]
name = "initial_cwin_bench"
harness = false

[[bench]]
name = "h3_benchmarks"
harness = false
